# donation-app

./: .gitignore  ANSWER.docx  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  db.sqlite3  entrypoint.sh  init_db.sh  manage.py  pyproject.toml
backend/donation_project/: settings.py  urls.py  wsgi.py
backend/donations/: admin.py  models.py  payment_gateway.py  serializers.py  views.py
backend/donations/migrations/: 0001_initial.py
backend/donations/tests/: test_api.py  test_models.py  test_payment_gateway.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.toml
frontend/src/: App.tsx  api.test.ts  api.ts  index.css
frontend/src/components/: DonationsList.test.tsx  DonationsList.tsx  Step1Amount.tsx  Step2Payment.tsx  Step3Review.tsx  Step4Success.tsx  Wizard.test.tsx
