[project]
name = "donation-backend"
version = "0.1.0"
description = "Donation app backend - Django REST Framework"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "gunicorn>=22.0",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "drf-spectacular>=0.27",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "donation_project.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
addopts = "-v --tb=short"
